--- a/classification/logit/logistic_regression.Rmd
+++ b/classification/logit/logistic_regression.Rmd
@@ -67,7 +67,7 @@ main_wine_df <- main_wine_df %>%
 # for the purpose of simplicity, we are going to start by only looking at the red wine
 red_main_df <- main_wine_df %>%
   # filtering to just the red wine
-  filter(color == "red") %>%
+  filter(color == "white") %>%
   # dropping the now-useless variable
   select(-color) %>%
   # ensuring quality is a factor; this will be useful later
@@ -271,7 +271,7 @@ accuracy_info$plot
 
 # user-defined costs for false negative and false positive to pinpoint where total cost is minimized
 cost_fp <- 10 # cost of false positive
-cost_fn <- 100 # cost of false negative
+cost_fn <- 100# cost of false negative
 # here the assumption I've made is that a false positive is 1/10th as costly as a false negative
 
 # creates the base data needed to visualize the ROC curves
@@ -286,7 +286,7 @@ roc_info <- ROCInfo(data = predictions_test_full,
 # plot the roc / cutoff-selection plots
 # color on the chart is cost -- darker is higher cost / greener is lower cost
 grid.draw(roc_info$plot)
-# looks like the optimal cutoff is at 0.11 
+# looks like the optimal cutoff is at 0.07
 ```
 
 ## Examining Model Performance for the Basic Logit
@@ -296,7 +296,7 @@ grid.draw(roc_info$plot)
 cm_info <- ConfusionMatrixInfo(data = predictions_test_full, 
                                predict = "prediction", 
                                actual = "low_qual_flag", 
-                               cutoff = .11) # (determined by roc_info$plot above)
+                               cutoff = .07) # (determined by roc_info$plot above)
 
 # prints the visualization of the confusion matrix (use print(cm_info$data) to see the raw data)
 cm_info$plot
@@ -323,7 +323,7 @@ caret::confusionMatrix(logit_fit_predictions,testing$low_qual_flag, positive='1'
 - Now using an Objective Function that penalizes low-ROI variables. This is similar to ridge regression except variables with coefficients non-consequential enough will be zero'ed out of the model.
 - Useful source: http://www.sthda.com/english/articles/36-classification-methods-essentials/149-penalized-logistic-regression-essentials-in-r-ridge-lasso-and-elastic-net/
 
-## Tuning the Hyperparameter for the Lasso Model (Optmizing Lamda)
+## Tuning the Hyperparameter for the Lasso Model w/ 2-Way Interactions (Optmizing Lamda)
 
 ```{r echo=T, results='hide', warning=FALSE}
 library(glmnet) # package needed for ridge methods 
@@ -352,7 +352,7 @@ y <- smote2_train$data$class
 set.seed(777) # set seed for reproduciblity
 # alpha = 1 just means lasso ; alpha = 0 is ridge
 # this step below can take a long time, as the range of possible lambdas is simulated
-cv.lasso <- cv.glmnet(x^2, y, alpha = 1, family = "binomial")
+cv.lasso <- cv.glmnet(x, y, alpha = 1, family = "binomial")
 ```
 
 ```{r}
@@ -444,67 +444,157 @@ caret::confusionMatrix(logit_fit_predictions,testing$low_qual_flag, positive='1'
 Conclusion: it doesn't look like any of the interactions suggested by the dbsmote-training-set-estimated lasso logit added much value when re-integrated into the original logit. Perhaps other sampling methods could be tried, or different methods of variable-selection may prove more insightful. 
 
 
-## Stepwise Variable Selection Techniques 
+## N-Degree Polynomial Variable Search Via Second Lasso Model
 
-For additional resources on stepwise variable selection methods, see below:
+```{r}
+# first we need to find a way to get all variables with their correspoding degree polynomial into the model
+# I'm also including here all two:way interaction effects
+# in the code below, the integer in quotes determines the max nth degree polynomial to be tested
+logit_3_formula <- as.formula(
+  paste('low_qual_flag ~', paste('poly(', colnames(training[-12]),',3)', collapse = ' + '), '+ .^2', '- .')
+  )
 
-- https://stackoverflow.com/questions/34278344/syntax-for-stepwise-logistic-regression-in-r
-- http://www.utstat.toronto.edu/~brunner/oldclass/appliedf11/handouts/2101f11StepwiseLogisticR.pdf
+# prints the formula so that we can see what will be used to create the logit
+logit_3_formula
+```
 
-
-```{r echo=T, results='hide', warning=FALSE}
-
-# rebuilding the basic model just a reminder of its form 
-logit_fit <- glm(low_qual_flag ~ .,
+```{r}
+# below is what the basic model without any variable-elimination yet conducted
+v3_logit_fit <- glm(logit_3_formula,
                  data = training,
                  family = binomial)
 
-# the default will be to do backwards stepwise variable selection only, so that's what we'll start off with
-slm1 <- step(logit_fit)
-```
-
-```{r}
-summary(slm1)
-
-# getting model probabilities for our testing set 
-logit_fit_probs <- predict(slm1,
-                           newdata = testing,
-                           type = "response")
-
-# turning these probabilities into classifications using the cutoff determined above 
-logit_fit_predictions <- factor(ifelse(logit_fit_probs > 0.04, 1, 0),levels=c('0','1'))
-
-# builiding a confusion matrix 
-caret::confusionMatrix(logit_fit_predictions,testing$low_qual_flag, positive='1')
+summary(v3_logit_fit)
 ```
 
 
+## Tuning the Hyperparameter for the Lasso Model w/ All n-th Degree Polynomials (Optmizing Lamda)
 
 ```{r echo=T, results='hide', warning=FALSE}
+library(glmnet) # package needed for ridge methods 
 
-# now running stepwise variable selection in both directions
-# for endposts we're using a model with all interactions as the most complicated possible to be considered
-# and for the least complicated possible model we're using the simplest model returned from the backwards step
-slm2 <- step(logit_fit, scope = list(upper = as.formula(low_qual_flag ~ .^2),
-                               lower = as.formula(low_qual_flag ~ volatile_acidity + chlorides + 
-    free_sulfur_dioxide + p_h)),
-             direction = "both")
+# we need two packages for an advanced samplign technique called SMOTE
+# because of the cross-validation involved in tuning our hyperparameter, we need more balanced data
+# SMOTE is one method of achieving this balance (others include: upsampling / downsampling / ROSE)
+# for all varieties of SMOTE, see https://cran.r-project.org/web/packages/smotefamily/smotefamily.pdf
+library(smotefamily) # main SMOTE variety package
+# there are different algos behind the types of SMOTE; we'll rely on one that uses KNN / DBSCAN
+library(dbscan) #needed for dbsmote type of SMOTE to function
+
+# first we construct a SMOTE-built training dataset that is more well-balanced than our actual pop. 
+smote2_train <- smotefamily::DBSMOTE(training[,-c(12)], as.numeric(as.character(training$low_qual_flag)))
+# then we inspect the incidence rate of our left-hand-side variable in the new training set
+janitor::tabyl(smote2_train$data$class) 
+
+# now using the same methodology as above, we recreate the formula with nth degree polynomial terms for the lasso
+# formula looks at all interaction effects as well as all degree polynomials from 1:n without repetition
+lasso_3_formula <- as.formula(
+  paste('class ~', paste('poly(', colnames(smote2_train$data[-12]),',3)', collapse = ' + '), '+ .^2', '- .')
+  )
+
+# prints the formula so that we can see what will be used to create the logit
+lasso_3_formula
+
+# Then we build our model matrix (including all two-way interactions possible (hence ^2))
+x_2 <- model.matrix(lasso_3_formula, smote2_train$data)
+# calling out what the outcome variable should be explicitly for this method
+y_2 <- smote2_train$data$class
+
+# Next we move on to find the best lambda using cross-validation
+# Cross-validation is for tuning hyperparameters; not normally needed if model requires no hyperparameters
+set.seed(777) # set seed for reproduciblity
+# alpha = 1 just means lasso ; alpha = 0 is ridge
+# this step below can take a long time, as the range of possible lambdas is simulated
+cv.lasso <- cv.glmnet(x_2, y_2, alpha = 1, family = "binomial")
 ```
 
 ```{r}
-summary(slm2)
+# plots the various possible lambdas 
+plot(cv.lasso)
+# Two common choices for lambda: lambda min and lambda lse (both are shown with dotted lines, in turn)
+# Up to the modeler to decide which to choose in this case; simplicity / error-minimization tradeoff
+```
 
+## Examining the Resultant Coefficients 
+
+```{r}
+# lambda min is the value that minimizes the prediction error
+cv.lasso$lambda.min
+# showing coefficients using lambda min (if . then variable has been zero'ed out)
+coef(cv.lasso, cv.lasso$lambda.min)
+
+# lambda lse gives the simplest model but also lies within one SE of the optimal value of lambda
+cv.lasso$lambda.1se
+# showing coefficients using lambda min (if . then variable has been zero'ed out)
+coef(cv.lasso, cv.lasso$lambda.1se)
+
+# storing the coefficients for later use
+lambda_coefs <- broom::tidy(coef(cv.lasso, cv.lasso$lambda.1se))
+```
+
+```{r}
+# grabs list of variables determined to be important by the lasso
+coef_list_lasso_2 <- lambda_coefs %>%
+  # arrange the coefficients in descending order of absolute value
+  arrange(desc(abs(value))) %>%
+  filter(row!='(Intercept)') %>%
+  select(row) 
+
+# prints out the list of the non-zero'ed out variables
+coef_list_lasso_2
+
+# rebuilt logit based on info gained from lasso; would like to be able to simply plug in the coef list, from above
+v5_logit_fit <- glm(low_qual_flag ~ free_sulfur_dioxide + poly(volatile_acidity,2) + poly(alcohol,2) + poly(fixed_acidity, 2),
+                 data = training,
+                 family = binomial)
+
+summary(v5_logit_fit)
+```
+
+## Re-Determining What Classification Cutoff is Appropriate for Poly Lasso (Round 3)
+
+```{r}
+# running predictions on the new post-lasso-improvements-integrated model
+# same chunks of code used previously below; 1st to find best cutoff, then to test performance
+
+# run predictions on testing set
+prediction_test <- predict(v5_logit_fit, newdata = testing, type = "response" )
+predictions_test_full <- data.frame(prediction = prediction_test, low_qual_flag = testing$low_qual_flag)
+
+# again defining the costs of false positive vs. costs of false negative (same ratio maintained)
+cost_fp <- 10
+cost_fn <- 100
+
+# building the data structure needed for the ROC charts
+roc_info <- ROCInfo(data = predictions_test_full, 
+                    predict = "prediction", 
+                    actual = "low_qual_flag", 
+                    cost.fp = cost_fp, 
+                    cost.fn = cost_fn )
+```
+
+```{r fig9, fig.height = 4, fig.width = 6, fig.align = "center"}
+# plot the new roc / cutoff-selection plots
+grid.draw(roc_info$plot)
+# looks like the optimal cutoff is now at 0.14
+```
+
+## Examining Model Performance for the "Refined" Post-Poly-Lasso Logit
+
+```{r}
 # getting model probabilities for our testing set 
-logit_fit_probs <- predict(slm2,
+logit5_fit_probs <- predict(v5_logit_fit,
                            newdata = testing,
                            type = "response")
 
 # turning these probabilities into classifications using the cutoff determined above 
-logit_fit_predictions <- factor(ifelse(logit_fit_probs > 0.04, 1, 0),levels=c('0','1'))
+logit_fit_predictions <- factor(ifelse(logit5_fit_probs > 0.14, 1, 0),levels=c('0','1'))
 
 # builiding a confusion matrix 
 caret::confusionMatrix(logit_fit_predictions,testing$low_qual_flag, positive='1')
 ```
 
+```{r}
 
+```
 
